--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
      
      <nav class="navigation container">
-        <div class="nav-brand"><a href="/">adarshbalika</a></div>
+        <div class="nav-brand"><a href="/">Bhavika Tibrewal</a></div>
         <ul class="list-non-bullet nav-pills">
           <li class="list-item-inline">
-            <a class="link link-active" href="/">home</a>
+            <a class="link link-active" href="/">Home</a>
           </li>
           <li class="list-item-inline">
-            <a class="link" href="/projects.html">projects</a>
+            <a class="link" href="/projects.html">Projects</a>
           </li>
           <li class="list-item-inline">
-            <a class="link" href="/blogs.html">blogs</a>
+            <a class="link" href="/blogs.html">Blogs</a>
           </li>
         </ul>
       </nav>
