--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BHAVIKA PORTFOLIO</title>
+    <title>Bhavika Portfolio</title>
 
     <link href="styles.css" rel="stylesheet"/>
 </head>
@@ -20,7 +20,7 @@
             <a class="link" href="/projects.html">Projects</a>
           </li>
           <li class="list-item-inline">
-            <a class="link" href="/blogs.html">Blogs</a>
+            <a class="link" href="/blog.html">Blogs</a>
           </li>
         </ul>
       </nav>
