--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 <body>
 
 
-
   <nav class="navigation container">
 
-    <!-- 
-      <div class="nav-name"><a class="link" href="/">Bhavika Tibrewal</a>
+    <div id="nav-name">
+      <a class="link" href="/">Bhavika Tibrewal</a>
     </div>
-   -->
+
     <ul class="nav-items">
       <li class="list-item-inline">
-        <a class="link link-active" href="/">Home</a>
+        <a class="link" id="link-active" href="/">Home</a>
       </li>
       <li class="list-item-inline">
         <a class="link" href="/projects.html">Projects</a>
@@ -33,24 +32,20 @@
     </ul>
   </nav>
 
-  <header class="hero">
 
-    <h1 class="hero-heading">
+  <header class="intro">
+    <div class="intro-text">
+    <h1 class="intro-heading">
       Welcome To <span class="heading-inverted"> Bhavika Tibrewal </span> Portfolio Website
     </h1>
-    <img class="hero-img" src="//" />
+    <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and
+      Web Hosting</p>
+    </div>
+
+    <img class="img" src="img/intro-cover.svg" />
+
   </header>
 
-
-  <section class="section ow">
-    <div class="container container-center">
-      <h1>Technologies</h1>
-      <p>
-        I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and
-        Web Hosting
-      </p>
-    </div>
-  </section>
 
   <section class="section">
     <div class="container container-center">
@@ -77,7 +72,7 @@
     <div class="footer-header">social media presence</div>
     <ul class="social-links ">
       <li class="list-item-inline">
-        <a class="link" href="//"> github </a>
+        <a class="link" href="https://github.com/bhtibrewal"> github </a>
       </li>
       <li class="list-item-inline">
         <a class="link" href="//"> twitter </a>
