--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,10 @@
         <a class="link" id="link-active" href="/">Home</a>
       </li>
       <li class="list-item-inline">
-        <a class="link" href="/projects.html">Projects</a>
+        <a class="link " href="projects.html">Projects</a>
       </li>
       <li class="list-item-inline">
-        <a class="link" href="/blog.html">Blogs</a>
+        <a class="link " href="blog.html">Blogs</a>
       </li>
     </ul>
   </nav>
@@ -42,7 +42,7 @@
       Web Hosting</p>
     </div>
 
-    <img class="img" src="img/intro-cover.svg" />
+    <img class="img" src="/img/intro-cover.svg" />
 
   </header>
 
@@ -54,7 +54,11 @@
         I like to showcase my work and thus, you can see my projects hosted
         online
       </p>
-      <a class="link link-primary" href="/projects.html">See Projects</a>
+      <a class="link link-primary" href="projects.html">See Projects</a>
+      <!-- 
+        <button class="button-primary">See Projects
+      </button>
+     -->
     </div>
   </section>
 
@@ -64,7 +68,7 @@
       <p>
         I am also working on some technical and non techincal blogs. I like to document my journey of learning.
       </p>
-      <a class="link link-secondary" href="/blog.html">Read Blogs</a>
+      <a class="link link-secondary" href="blog.html">Read Blogs</a>
     </div>
   </section>
 
