--- a/src/projects.html
+++ b/src/projects.html
@@ -16,7 +16,7 @@
     
         <ul class="nav-items">
           <li class="list-item-inline">
-            <a class="link" href="/">Home</a>
+            <a class="link" href="index.html">Home</a>
           </li>
           <li class="list-item-inline">
             <a class="link " 
