blog & project page

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,8 @@
         I like to showcase my work and thus, you can see my projects hosted
         online
       </p>
-      <a class="link link-primary" href="projects.html">See Projects</a>
+      <a class="link link-primary" href="projects.html">See Projects
+      </a>
       <!-- 
         <button class="button-primary">See Projects
       </button>
