--- a/src/blog.html
+++ b/src/blog.html
@@ -26,19 +26,32 @@
           </li>
         </ul>
       </nav>
+      <header>
+        <h1 class="container " >
+          MY Blogs</h1>
+     </header>
 
-    <header>
-       <h1> Blogs</h1> 
-    </header>
-    <section class=" ">
-        <h3>
-            <a class="" href="https://bhavika-tibrewal.hashnode.dev/introduction-to-markdown"> Markdown </a>
-        </h3>
-
-        <p>
-
-        </p>
-    </section>
-    
+     <section class="section ow">
+       <div class="container container-center">
+         <h1>My Quiz</h1>
+         <p>
+           I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+         </p>
+         <a class="link link-primary" href="projects.html">Read Blog
+         </a>
+         <!-- <a class="link link-secondary" href="blog.html">Source Code</a> -->
+       </div>
+     </section>
+     <section class="section">
+       <div class="container container-center">
+         <h1>My Quiz</h1>
+         <p>
+           I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+         </p>
+         <a class="link link-primary" href="projects.html">Read Blog
+         </a>
+        
+       </div>
+     </section>
 </body>
 </html>
