--- a/src/projects.html
+++ b/src/projects.html
@@ -28,8 +28,32 @@
         </ul>
       </nav>
       <header>
-          Projects
+         <h1 class="container " >
+           MY Projects</h1>
       </header>
+
+      <section class="section ow">
+        <div class="container container-center">
+          <h1>My Quiz</h1>
+          <p>
+            I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+          </p>
+          <a class="link link-primary" href="projects.html">Live Project
+          </a>
+          <a class="link link-secondary" href="blog.html">Source Code</a>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container container-center">
+          <h1>My Quiz</h1>
+          <p>
+            I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+          </p>
+          <a class="link link-primary" href="projects.html">Live Project
+          </a>
+          <a class="link link-secondary" href="blog.html">Source Code</a>
+        </div>
+      </section>
     
 </body>
 </html>
