--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,11 @@
 
   <header class="intro">
     <div class="intro-text">
-    <h1 class="intro-heading">
-      Welcome To <span class="heading-inverted"> Bhavika Tibrewal </span> Portfolio Website
-    </h1>
-    <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and
-      Web Hosting</p>
+      <h1 class="intro-heading">
+        Welcome To <span class="heading-inverted"> Bhavika Tibrewal </span> Portfolio Website
+      </h1>
+      <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and
+        Web Hosting</p>
     </div>
 
     <img class="img" src="/img/intro-cover.svg" />
@@ -47,44 +47,47 @@
   </header>
 
 
-  <section class="section">
-    <div class="container container-center">
-      <h1>Projects</h1>
-      <p>
-        I like to showcase my work and thus, you can see my projects hosted
-        online
-      </p>
-      <a class="link link-primary" href="projects.html">See Projects
-      </a>
-      <!-- 
+  <section class="section container container-center">
+
+    <h1>Projects</h1>
+    <p>
+      I like to showcase my work and thus, you can see my projects hosted
+      online
+    </p>
+    <a class="link link-primary" href="projects.html">See Projects
+    </a>
+    <!-- 
         <button class="button-primary">See Projects
       </button>
      -->
-    </div>
+
   </section>
 
-  <section class="section ow">
-    <div class="container container-center">
-      <h1>Blogs</h1>
-      <p>
-        I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-      </p>
-      <a class="link link-secondary" href="blog.html">Read Blogs</a>
-    </div>
+  <section class="section ow container container-center">
+    <h1>Blogs</h1>
+    <p>
+      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+    </p>
+    <a class="link link-secondary" href="blog.html">Read Blogs</a>
   </section>
+  <br>
 
   <footer class="footer">
     <div class="footer-header">social media presence</div>
     <ul class="social-links ">
       <li class="list-item-inline">
-        <a class="link" href="https://github.com/bhtibrewal"> github </a>
-      </li>
-      <li class="list-item-inline">
-        <a class="link" href="//"> twitter </a>
+        <a class="link" href="https://github.com/bhtibrewal">
+          <img class="footer-icons" src="/img/youtube.svg">
+        </a>
       </li>
       <li class="list-item-inline">
         <a class="link" href="//">
-          linkedin
+          <img class="footer-icons" src="/img/twitter.svg">
+        </a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link" href="//">
+          <img class="footer-icons" src="/img/linkedin.svg">
         </a>
       </li>
     </ul>
