--- a/src/projects.html
+++ b/src/projects.html
@@ -1,59 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects|Bhavika Tibrewal</title>
-    <link href="styles.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projects | Bhavika Tibrewal</title>
+  <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
-    <nav class="navigation container">
+  <nav class="navigation container">
 
-        <div id="nav-name">
-          <a class="link" href="/">Bhavika Tibrewal</a>
-        </div>
-    
-        <ul class="nav-items">
-          <li class="list-item-inline">
-            <a class="link" href="index.html">Home</a>
-          </li>
-          <li class="list-item-inline">
-            <a class="link " 
-            id="link-active" href="projects.html">Projects</a>
-          </li>
-          <li class="list-item-inline">
-            <a class="link " href="blog.html">Blogs</a>
-          </li>
-        </ul>
-      </nav>
-      <header>
-         <h1 class="container " >
-           MY Projects</h1>
-      </header>
+    <div id="nav-name">
+      <a class="link" href="/">Bhavika Tibrewal</a>
+    </div>
 
-      <section class="section ow">
-        <div class="container container-center">
-          <h1>My Quiz</h1>
-          <p>
-            I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-          </p>
-          <a class="link link-primary" href="projects.html">Live Project
-          </a>
-          <a class="link link-secondary" href="blog.html">Source Code</a>
-        </div>
-      </section>
-      <section class="section">
-        <div class="container container-center">
-          <h1>My Quiz</h1>
-          <p>
-            I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-          </p>
-          <a class="link link-primary" href="projects.html">Live Project
-          </a>
-          <a class="link link-secondary" href="blog.html">Source Code</a>
-        </div>
-      </section>
-    
+    <ul class="nav-items">
+      <li class="list-item-inline">
+        <a class="link" href="index.html">Home</a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link " id="link-active" href="projects.html">Projects</a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link " href="blog.html">Blogs</a>
+      </li>
+    </ul>
+  </nav>
+  <header class="header">
+    <h1 >
+      MY Projects
+    </h1>
+    <img class="img" src="/img/"/>
+  </header>
+  <br>
+
+  <section class="section ow container container-center">
+
+    <h1>My Quiz</h1>
+    <p>
+      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+    </p>
+    <a class="link link-primary" href="projects.html">Live Project
+    </a>
+    <a class="link link-secondary" href="blog.html">Source Code</a>
+
+  </section>
+  <section class="section container container-center">
+
+    <h1>My Quiz</h1>
+    <p>
+      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+    </p>
+    <a class="link link-primary" href="projects.html">Live Project
+    </a>
+    <a class="link link-secondary" href="blog.html">Source Code</a>
+
+  </section>
+  <br>
+
+  <footer class="footer">
+    <div class="footer-header">social media presence</div>
+    <ul class="social-links ">
+      <li class="list-item-inline">
+        <a class="link" href="https://github.com/bhtibrewal">
+          <img class="footer-icons" src="/img/youtube.svg">
+        </a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link" href="//">
+          <img class="footer-icons" src="/img/twitter.svg">
+        </a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link" href="//">
+          <img class="footer-icons" src="/img/linkedin.svg">
+        </a>
+      </li>
+    </ul>
+  </footer>
+
 </body>
+
 </html>
