REFACTOR : display set to flex
display property of  container-center, set to FLEX and created a div with name "buttons" for the two buttons
finally set the display property of that buttons containing div to FLEX

--- a/src/projects.html
+++ b/src/projects.html
@@ -42,10 +42,12 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
+   <div class="buttons">
     <a class="link link-primary" href="projects.html">Live Project
     </a>
     <a class="link link-secondary" href="blog.html">Source Code</a>
 
+   </div>
   </section>
   <section class="section container container-center">
 
@@ -53,10 +55,12 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
-    <a class="link link-primary" href="projects.html">Live Project
-    </a>
-    <a class="link link-secondary" href="blog.html">Source Code</a>
-
+    <div class="buttons">
+      <a class="link link-primary" href="projects.html">Live Project
+      </a>
+      <a class="link link-secondary" href="blog.html">Source Code</a>
+  
+     </div>
   </section>
   <br>
 
