--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,10 @@
       I like to showcase my work and thus, you can see my projects hosted
       online
     </p>
-    <a class="link link-primary" href="projects.html">See Projects
-    </a>
+    <div id="buttons">
+      <a class="link link-primary" href="projects.html">See Projects
+      </a>
+    </div>
     <!-- 
         <button class="button-primary">See Projects
       </button>
@@ -68,7 +70,9 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
+   <div id="buttons">
     <a class="link link-secondary" href="blog.html">Read Blogs</a>
+   </div>
   </section>
   <br>
 
