--- a/src/projects.html
+++ b/src/projects.html
@@ -69,7 +69,7 @@
     <ul class="social-links ">
       <li class="list-item-inline">
         <a class="link" href="https://github.com/bhtibrewal">
-          <img class="footer-icons" src="/img/youtube.svg">
+          <img class="footer-icons" src="/img/Octicons-mark-github.svg">
         </a>
       </li>
       <li class="list-item-inline">
