--- a/src/projects.html
+++ b/src/projects.html
@@ -41,10 +41,11 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
+    <div class="buttons">
     <a class="link link-primary" href="https://1d2kl.csb.app/">Live Project
     </a>
     <a class="link link-secondary" href="https://github.com/bhtibrewal/Is_Your_Birthday_a_Palidrome">Source Code</a>
-
+</div>
   </section>
   <section class="section container container-center">
 
@@ -52,10 +53,11 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
+    <div class="buttons">
     <a class="link link-primary" href="fun-with-triangles-bhavika.netlify.app/">Live Project
     </a>
     <a class="link link-secondary" href="https://github.com/bhtibrewal/Fun-with-Triangles">Source Code</a>
-
+</div>
   </section>
   <section class="section ow container container-center">
 
@@ -63,12 +65,9 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
-<<<<<<< Updated upstream
    <div class="buttons">
-    <a class="link link-primary" href="projects.html">Live Project
-=======
+    
     <a class="link link-primary" href="https://xjyl7.csb.app/">Live Project
->>>>>>> Stashed changes
     </a>
     <a class="link link-secondary" href="https://github.com/bhtibrewal/Is-Your-Birthday-Lucky">Source Code</a>
 
@@ -80,10 +79,11 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
+    <div class="buttons">
     <a class="link link-primary" href="rbfsd.csb.app/">Live Project
     </a>
     <a class="link link-secondary" href="https://github.com/bhtibrewal/Movie-recommendation">Source Code</a>
-
+</div>
   </section>
   <section class="section container container-center">
 
@@ -91,10 +91,11 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
+    <div class="buttons">
     <a class="link link-primary" href="https://n2oxf.csb.app/">Live Project
     </a>
     <a class="link link-secondary" href="https://github.com/bhtibrewal/Emoji-interpreter">Source Code</a>
-
+</div>
   </section>
   <section class="section container container-center">
 
@@ -102,10 +103,11 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
+    <div class="buttons">
     <a class="link link-primary" href="ferb-latin-translate-app.netlify.app/">Live Project
     </a>
     <a class="link link-secondary" href="https://github.com/bhtibrewal/ferb-latin-translate">Source Code</a>
-
+  </div>
   </section>
   
   <section class="section ow container container-center">
@@ -128,7 +130,7 @@
     <ul class="social-links ">
       <li class="list-item-inline">
         <a class="link" href="https://github.com/bhtibrewal">
-          <img class="footer-icons" src="/img/Octicons-mark-github.svg">
+          <img class="footer-icons" src="/img/github.svg">
         </a>
       </li>
       <li class="list-item-inline">
