--- a/src/index.html
+++ b/src/index.html
@@ -81,17 +81,17 @@
     <ul class="social-links ">
       <li class="list-item-inline">
         <a class="link" href="https://github.com/bhtibrewal">
-          <img class="footer-icons" src="/img/youtube.svg">
+          <img class="footer-icons" src="/img/Octicons-mark-github.svg" />
         </a>
       </li>
       <li class="list-item-inline">
         <a class="link" href="//">
-          <img class="footer-icons" src="/img/twitter.svg">
+          <img class="footer-icons" src="/img/twitter.svg" />
         </a>
       </li>
       <li class="list-item-inline">
         <a class="link" href="//">
-          <img class="footer-icons" src="/img/linkedin.svg">
+          <img class="footer-icons" src="/img/linkedin.svg" />
         </a>
       </li>
     </ul>
