--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,14 @@
   </header>
 
 
-  <section class="section container container-center">
+  <section class="section ow container container-center">
 
     <h1>Projects</h1>
+    <div class="icon">
+      Tech Stack :
+      <img src="https://img.icons8.com/ios-glyphs/40/000000/react.png"/><img src="https://img.icons8.com/ios-glyphs/30/000000/javascript.png"/>
+      <img src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/><img src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>
+    </div>
     <p>
       I like to showcase my work and thus, you can see my projects hosted
       online
@@ -58,14 +63,10 @@
       <a class="link link-primary" href="projects.html">See Projects
       </a>
     </div>
-    <!-- 
-        <button class="button-primary">See Projects
-      </button>
-     -->
 
   </section>
 
-  <section class="section ow container container-center">
+  <section class="section container container-center">
     <h1>Blogs</h1>
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
