--- a/src/projects.html
+++ b/src/projects.html
@@ -29,73 +29,108 @@
     </ul>
   </nav>
   <header class="header">
-    <h1 >
+    <h1>
       MY Projects
     </h1>
-    <img class="img" src="/img/"/>
+    <img class="img" src="/img/react.svg" />
+    <img class="img" src="/img/static_assets_rpm6.svg" />
   </header>
-  <br>
+  
   <section class="section ow container container-center">
 
-    <h1>Mark 13 : Is Your Birthday a Palindrome </h1>
+    <h1>Mark 14 : Stock Purchase</h1>
+    <div class="icon">
+      Tech Stack :
+      <img src="https://img.icons8.com/ios-glyphs/40/000000/react.png"/><img src="https://img.icons8.com/ios-glyphs/30/000000/javascript.png"/>
+      <img src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/><img src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>
+    </div>
     <p>
-      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+      A stock purchase app to help the user calculate the profit/loss from the stock and the percentage.
     </p>
     <div class="buttons">
-    <a class="link link-primary" href="https://1d2kl.csb.app/">Live Project
-    </a>
-    <a class="link link-secondary" href="https://github.com/bhtibrewal/Is_Your_Birthday_a_Palidrome">Source Code</a>
-</div>
+      <a class="link link-primary" href="https://vsl52.csb.app//">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/Stock-Purchases">Source Code</a>
+    </div>
   </section>
   <section class="section container container-center">
 
-    <h1>Mark 12 : Fun with Triangles</h1>
+    <h1>Mark 13 : Is Your Birthday a Palindrome </h1>
     <p>
-      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+      Take birthday as input from the user and calculate if the birthday is palindrome or not. If the birthday is not a
+      palindrome calculate the next palindrome date and the number of days they missed it by.
     </p>
     <div class="buttons">
-    <a class="link link-primary" href="fun-with-triangles-bhavika.netlify.app/">Live Project
-    </a>
-    <a class="link link-secondary" href="https://github.com/bhtibrewal/Fun-with-Triangles">Source Code</a>
-</div>
+      <a class="link link-primary" href="https://1d2kl.csb.app/">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/Is_Your_Birthday_a_Palidrome">Source Code</a>
+    </div>
   </section>
   <section class="section ow container container-center">
 
+    <h1>Mark 12 : Fun with Triangles</h1>
+    <p>
+      A fun app on triangles. Take the angles as input and display if it is a triangle. Next a small quiz on
+      triangles.Take the 2 sides of triangle and display the hypotenuese. Take the base and height of triangle and give
+      the area.
+    </p>
+    <div class="buttons">
+      <a class="link link-primary" href="fun-with-triangles-bhavika.netlify.app/">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/Fun-with-Triangles">Source Code</a>
+    </div>
+  </section>
+  <section class="section container container-center">
+
     <h1>Mark 11 : Is Your Birthday Lucky </h1>
     <p>
-      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+      Takes birthday and a lucky number from the user. Display if the user is lucky or not.
     </p>
-   <div class="buttons">
-    
-    <a class="link link-primary" href="https://xjyl7.csb.app/">Live Project
-    </a>
-    <a class="link link-secondary" href="https://github.com/bhtibrewal/Is-Your-Birthday-Lucky">Source Code</a>
+    <div class="buttons">
 
-   </div>
+      <a class="link link-primary" href="https://xjyl7.csb.app/">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/Is-Your-Birthday-Lucky">Source Code</a>
+
+    </div>
+  </section>
+  <section class="section ow container container-center">
+
+    <h1>Mark 10 : Cash Register</h1>
+    <p>
+      The user has 2000, 500, 100, 20, 10, 5, 1 currency notes.
+      Take Bill Amount and Cash Given from the user.
+      Help the user by telling him how to return change to the customer with minimum number of notes.
+    </p>
+    <div class="buttons">
+      <a class="link link-primary" href=" https://fv9by.csb.app//">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/Movie-recommendation">Source Code</a>
+    </div>
   </section>
   <section class="section container container-center">
 
     <h1>Mark 9 : Movie App</h1>
     <p>
-      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+      Display movie suggestions along with ratings to the user based on the genre he/she selects.
     </p>
     <div class="buttons">
-    <a class="link link-primary" href="rbfsd.csb.app/">Live Project
-    </a>
-    <a class="link link-secondary" href="https://github.com/bhtibrewal/Movie-recommendation">Source Code</a>
-</div>
+      <a class="link link-primary" href="https://rbfsd.csb.app/">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/Movie-recommendation">Source Code</a>
+    </div>
   </section>
-  <section class="section container container-center">
+  <section class="section ow container container-center">
 
     <h1>Mark 8 : Emoji Interpreter</h1>
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
     <div class="buttons">
-    <a class="link link-primary" href="https://n2oxf.csb.app/">Live Project
-    </a>
-    <a class="link link-secondary" href="https://github.com/bhtibrewal/Emoji-interpreter">Source Code</a>
-</div>
+      <a class="link link-primary" href="https://n2oxf.csb.app/">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/Emoji-interpreter">Source Code</a>
+    </div>
   </section>
   <section class="section container container-center">
 
@@ -104,12 +139,12 @@
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
     <div class="buttons">
-    <a class="link link-primary" href="ferb-latin-translate-app.netlify.app/">Live Project
-    </a>
-    <a class="link link-secondary" href="https://github.com/bhtibrewal/ferb-latin-translate">Source Code</a>
-  </div>
+      <a class="link link-primary" href="ferb-latin-translate-app.netlify.app/">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/ferb-latin-translate">Source Code</a>
+    </div>
   </section>
-  
+
   <section class="section ow container container-center">
 
     <h1>Mark 1 : My Quiz</h1>
@@ -120,8 +155,8 @@
       <a class="link link-primary" href="projects.html">Live Project
       </a>
       <a class="link link-secondary" href="blog.html">Source Code</a>
-  
-     </div>
+
+    </div>
   </section>
   <br>
 
