--- a/src/index.html
+++ b/src/index.html
@@ -34,18 +34,20 @@
 
 
   <header class="intro ">
-    <div class="intro-text">
+    
       <h1 class="intro-heading">
-        Welcome To <span class="heading-inverted"> Bhavika Tibrewal </span> Portfolio Website
+        Hi! 
+        <div>I'm <span class="heading-inverted"> Bhavika</div> </span> <div>Web Developer</div>
       </h1>
-      <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and
-        Web Hosting</p>
-    </div>
 
     <img class="img" src="/img/intro-cover.svg" />
 
   </header>
-
+  <section class="section container container-center">
+    <h1>About</h1>
+    <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and  Web Hosting</p>
+   
+  </section>
 
   <section class="section ow container container-center">
 
