--- a/src/blog.html
+++ b/src/blog.html
@@ -37,14 +37,14 @@
 
   <section class="section ow container container-center">
 
-    <h1>My Quiz</h1>
+    <h1>CSS Box-Model: For a 5-year-old</h1>
     <p>
-      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+    A Guide to Box-Model: The Basic building block of CSS.Blog to help beginers understand this important concept and apply in their styling.
     </p>
     <div class="button">
-      <a class="link link-primary" href="projects.html">Read Blog
+      <a class="link link-primary" href="https://bhavika-tibrewal.hashnode.dev/css-box-model-for-a-5-year-old">Read Blog
       </a></div>
-    <!-- <a class="link link-secondary" href="blog.html">Source Code</a> -->
+    
 
   </section>
   <section class="section container container-center">
@@ -63,7 +63,7 @@
   <br>
 
   <footer class="footer">
-    <div class="footer-header">social media presence</div>
+    <div class="footer-header">Get in Touch</div>
     <ul class="social-links ">
       <li class="list-item-inline">
         <a class="link" href="https://github.com/bhtibrewal">
