--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
   <br>
 
   <footer class="footer">
-    <div class="footer-header">social media presence</div>
+    <div class="footer-header">Get in Touch</div>
     <ul class="social-links ">
       <li class="list-item-inline">
         <a class="link" href="https://github.com/bhtibrewal">
