--- a/src/projects.html
+++ b/src/projects.html
@@ -75,7 +75,7 @@
       the area.
     </p>
     <div class="buttons">
-      <a class="link link-primary" href="fun-with-triangles-bhavika.netlify.app/">Live Project
+      <a class="link link-primary" href="https://fun-with-triangles-bhavika.netlify.app/">Live Project
       </a>
       <a class="link link-secondary" href="https://github.com/bhtibrewal/Fun-with-Triangles">Source Code</a>
     </div>
@@ -139,7 +139,7 @@
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
     <div class="buttons">
-      <a class="link link-primary" href="ferb-latin-translate-app.netlify.app/">Live Project
+      <a class="link link-primary" href="https://ferb-latin-translate-app.netlify.app/">Live Project
       </a>
       <a class="link link-secondary" href="https://github.com/bhtibrewal/ferb-latin-translate">Source Code</a>
     </div>
@@ -161,7 +161,7 @@
   <br>
 
   <footer class="footer">
-    <div class="footer-header">social media presence</div>
+    <div class="footer-header">Get in Touch</div>
     <ul class="social-links ">
       <li class="list-item-inline">
         <a class="link" href="https://github.com/bhtibrewal">
