--- a/src/index.html
+++ b/src/index.html
@@ -34,18 +34,21 @@
 
 
   <header class="intro ">
-    
+    <div>
       <h1 class="intro-heading">
         Hi! 
-        <div>I'm <span class="heading-inverted"> Bhavika</div> </span> <div>Web Developer</div>
+        <div>I'm <span class="heading-inverted"> Bhavika</div> </span> 
+        
       </h1>
+      <p>I'm learning to create full-stack web pages.</p>
+    </div>
 
     <img class="img" src="/img/intro-cover.svg" />
 
   </header>
   <section class="section container container-center">
     <h1>About</h1>
-    <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and  Web Hosting</p>
+    <p>I'm a final year B-Tech student. I'm familiar with HTML5, CSS3, Git, JavaScript, ReactJS, and  Web Hosting.</p>
    
   </section>
 
