--- a/src/projects.html
+++ b/src/projects.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <!-- navigation -->
   <nav class="navigation container">
 
     <div id="nav-name">
@@ -28,14 +29,55 @@
       </li>
     </ul>
   </nav>
+
+  <!-- header -->
   <header class="header">
     <h1>
       MY Projects
     </h1>
-    <img class="img" src="/img/react.svg" />
-    <img class="img" src="/img/static_assets_rpm6.svg" />
+    <img alt="" class="img" src="/img/react.svg" />
+    <img alt="" class="img" src="/img/static_assets_rpm6.svg" />
   </header>
+
+  <!-- sections -->
+  <section class="section ow container container-center">
+
+    <h1>Amazon clone</h1>
+    <div class="icon">
+      Tech Stack :
+      <img alt="react logo" src="https://img.icons8.com/ios-glyphs/40/000000/react.png"/>
+      <img alt="css3 logo" src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/>
+      <img alt="HTML5 logo" src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>
+    </div>
+    <p>
+      A clone of amazon with features like: Sign-In Page- Sign-In/Create Account (Firebase authentication), Add to Cart, Remove from Cart, Calculate Subtotal, Totally Responsive,  
+
+    </p>
+    <div class="buttons">
+      <a class="link link-primary" href="https://clone-dcda9.web.app/">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/amazon-clone">Source Code</a>
+    </div>
+  </section>
   
+  <section class="section container container-center">
+
+    <h1>Wishlist </h1>
+    <div class="icon">
+      Tech Stack :
+      <img alt="react logo" src="https://img.icons8.com/ios-glyphs/40/000000/react.png"/>
+      <img alt="css3 logo" src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/><img alt="HTML5 logo" src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>
+    </div>
+    <p>
+      A Wislist App with Light/Dark theme feature.
+    </p>
+    <div class="buttons">
+      <a class="link link-primary" href="https://1d2kl.csb.app/">Live Project
+      </a>
+      <a class="link link-secondary" href="https://github.com/bhtibrewal/prac-react">Source Code</a>
+    </div>
+  </section>
+
   <section class="section ow container container-center">
 
     <h1>Mark 14 : Stock Purchase</h1>
@@ -53,6 +95,7 @@
       <a class="link link-secondary" href="https://github.com/bhtibrewal/Stock-Purchases">Source Code</a>
     </div>
   </section>
+
   <section class="section container container-center">
 
     <h1>Mark 13 : Is Your Birthday a Palindrome </h1>
@@ -154,7 +197,6 @@
     <div class="icon">
       Tech Stack :
       <img alt="react logo" src="https://img.icons8.com/ios-glyphs/40/000000/react.png"/>
-      
       <img alt="css3 logo" src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/>
       <img alt="HTML5 logo" src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>
     </div>
