--- a/src/index.html
+++ b/src/index.html
@@ -34,16 +34,15 @@
 
 
   <header class="intro ">
-    <div>
+    <div class="intro-text">
       <h1 class="intro-heading">
         Hi! 
         <div>I'm <span class="heading-inverted"> Bhavika</div> </span> 
-        
       </h1>
       <p>I'm learning to create full-stack web pages.</p>
     </div>
 
-    <img class="img" src="/img/intro-cover.svg" />
+    <img alt="" class="img" src="/img/intro-cover.svg" />
 
   </header>
   <section class="section container container-center">
@@ -57,8 +56,10 @@
     <h1>Projects</h1>
     <div class="icon">
       Tech Stack :
-      <img src="https://img.icons8.com/ios-glyphs/40/000000/react.png"/><img src="https://img.icons8.com/ios-glyphs/30/000000/javascript.png"/>
-      <img src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/><img src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>
+      <img alt="" src="https://img.icons8.com/ios-glyphs/40/000000/react.png"/>
+      <img alt="" src="https://img.icons8.com/ios-glyphs/30/000000/javascript.png"/>
+      <img alt="" src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/>
+      <img alt="" src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>
     </div>
     <p>
       I like to showcase my work and thus, you can see my projects hosted
@@ -87,24 +88,21 @@
     <ul class="social-links ">
       <li class="list-item-inline">
         <a class="link" href="https://github.com/bhtibrewal">
-          <img class="footer-icons" src="/img/Octicons-mark-github.svg" />
+          <img alt="github" class="footer-icons" src="/img/Octicons-mark-github.svg" />
         </a>
       </li>
       <li class="list-item-inline">
         <a class="link" href="//">
-          <img class="footer-icons" src="/img/twitter.svg" />
+          <img alt="twitter" class="footer-icons" src="/img/twitter.svg" />
         </a>
       </li>
       <li class="list-item-inline">
         <a class="link" href="//">
-          <img class="footer-icons" src="/img/linkedin.svg" />
+          <img alt="linkedin" class="footer-icons" src="/img/linkedin.svg" />
         </a>
       </li>
     </ul>
   </footer>
 
-  <body>
-
-  </body>
 
 </html>
