--- a/src/blog.html
+++ b/src/blog.html
@@ -1,87 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blogs | Bhavika Tibrewal</title>
+    <link href="styles.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blogs | Bhavika Tibrewal</title>
-  <link href="styles.css" rel="stylesheet" />
-</head>
+  <body>
+    <nav class="navigation container">
+      <div id="nav-name">
+        <a class="link" href="/">Bhavika Tibrewal</a>
+      </div>
 
-<body>
-  <nav class="navigation container">
+      <ul class="nav-items">
+        <li class="list-item-inline">
+          <a class="link" href="index.html">Home</a>
+        </li>
+        <li class="list-item-inline">
+          <a class="link" href="projects.html">Projects</a>
+        </li>
+        <li class="list-item-inline">
+          <a class="link" id="link-active" href="blog.html">Blogs</a>
+        </li>
+      </ul>
+    </nav>
+    <header class="header">
+      <h1 class="container">MY Blogs</h1>
+      <img class="img" src="/img/Blog-cover.svg" />
+    </header>
+    <br />
 
-    <div id="nav-name">
-      <a class="link" href="/">Bhavika Tibrewal</a>
-    </div>
-
-    <ul class="nav-items">
-      <li class="list-item-inline">
-        <a class="link" href="index.html">Home</a>
-      </li>
-      <li class="list-item-inline">
-        <a class="link " href="projects.html">Projects</a>
-      </li>
-      <li class="list-item-inline">
-        <a class="link" id="link-active" href="blog.html">Blogs</a>
-      </li>
-    </ul>
-  </nav>
-  <header class="header">
-    <h1 class="container ">
-      MY Blogs</h1>
-    <img class="img" src="/img/Blog-cover.svg" />
-  </header>
-  <br>
-
-  <section class="section ow container container-center">
-
-    <h1>CSS Box-Model: For a 5-year-old</h1>
-    <p>
-    A Guide to Box-Model: The Basic building block of CSS.Blog to help beginers understand this important concept and apply in their styling.
-    </p>
-    <div class="button">
-      <a class="link link-primary" href="https://bhavika-tibrewal.hashnode.dev/css-box-model-for-a-5-year-old">Read Blog
-      </a></div>
-    
-
-  </section>
-  <section class="section container container-center">
-
-    <h1>My Quiz</h1>
-    <p>
-      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-    </p>
-    <div class="button">
-      <a class="link link-primary" href="projects.html">Read Blog
-      </a>
-    </div>
-
-
-  </section>
-  <br>
-
-  <footer class="footer">
-    <div class="footer-header">Get in Touch</div>
-    <ul class="social-links ">
-      <li class="list-item-inline">
-        <a class="link" href="https://github.com/bhtibrewal">
-          <img class="footer-icons" src="/img/Octicons-mark-github.svg">
+    <section class="section ow container container-center">
+      <h1>CSS Box-Model: For a 5-year-old</h1>
+      <p>
+        A Guide to Box-Model: The Basic building block of CSS.Blog to help
+        beginers understand this important concept and apply in their styling.
+      </p>
+      <div class="button">
+        <a
+          class="link link-primary"
+          href="https://bhavika-tibrewal.hashnode.dev/css-box-model-for-a-5-year-old"
+          >Read Blog
         </a>
-      </li>
-      <li class="list-item-inline">
-        <a class="link" href="//">
-          <img class="footer-icons" src="/img/twitter.svg">
-        </a>
-      </li>
-      <li class="list-item-inline">
-        <a class="link" href="//">
-          <img class="footer-icons" src="/img/linkedin.svg">
-        </a>
-      </li>
-    </ul>
-  </footer>
-</body>
+      </div>
+    </section>
+    <section class="section container container-center">
+      <h1>My Quiz</h1>
+      <p>
+        I am also working on some technical and non techincal blogs. I like to
+        document my journey of learning.
+      </p>
+      <div class="button">
+        <a class="link link-primary" href="projects.html">Read Blog </a>
+      </div>
+    </section>
+    <br />
 
+    <footer class="footer">
+      <div class="footer-header">Get in Touch</div>
+      <ul class="social-links">
+        <li class="list-item-inline">
+          <a class="link" href="https://github.com/bhtibrewal">
+            <img
+              alt="github"
+              class="footer-icons"
+              src="/img/Octicons-mark-github.svg"
+            />
+          </a>
+        </li>
+        <li class="list-item-inline">
+          <a class="link" href="https://twitter.com/bhtibrewal>
+            <img alt="twitter" class="footer-icons" src="/img/twitter.svg" />
+          </a>
+        </li>
+        <li class="list-item-inline">
+          <a class="link" href="https://www.linkedin.com/in/bhavika-tibrewal/">
+            <img alt="linkedin" class="footer-icons" src="/img/linkedin.svg" />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
