--- a/src/projects.html
+++ b/src/projects.html
@@ -397,17 +397,21 @@
       <ul class="social-links">
         <li class="list-item-inline">
           <a class="link" href="https://github.com/bhtibrewal">
-            <img class="footer-icons" src="/img/Octicons-mark-github.svg" />
+            <img
+              alt="github"
+              class="footer-icons"
+              src="/img/Octicons-mark-github.svg"
+            />
           </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="//">
-            <img class="footer-icons" src="/img/twitter.svg" />
+          <a class="link" href="https://twitter.com/bhtibrewal">
+            <img alt="twitter" class="footer-icons" src="/img/twitter.svg" />
           </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="//">
-            <img class="footer-icons" src="/img/linkedin.svg" />
+          <a class="link" href="https://www.linkedin.com/in/bhavika-tibrewal/">
+            <img alt="linkedin" class="footer-icons" src="/img/linkedin.svg" />
           </a>
         </li>
       </ul>
