--- a/src/index.html
+++ b/src/index.html
@@ -92,12 +92,12 @@
         </a>
       </li>
       <li class="list-item-inline">
-        <a class="link" href="//">
+        <a class="link" href="https://twitter.com/bhtibrewal">
           <img alt="twitter" class="footer-icons" src="/img/twitter.svg" />
         </a>
       </li>
       <li class="list-item-inline">
-        <a class="link" href="//">
+        <a class="link" href="https://www.linkedin.com/in/bhavika-tibrewal/">
           <img alt="linkedin" class="footer-icons" src="/img/linkedin.svg" />
         </a>
       </li>
