--- a/src/blog.html
+++ b/src/blog.html
@@ -71,7 +71,7 @@
           </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://twitter.com/bhtibrewal>
+          <a class="link" href="https://twitter.com/bhtibrewal">
             <img alt="twitter" class="footer-icons" src="/img/twitter.svg" />
           </a>
         </li>
