--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bhavika Portfolio</title>
 
-  <link href="styles.css" rel="stylesheet" />
+  <link href="../src/styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -24,10 +24,10 @@
         <a class="link" id="link-active" href="/">Home</a>
       </li>
       <li class="list-item-inline">
-        <a class="link " href="projects.html">Projects</a>
+        <a class="link " href="/src/projects.html">Projects</a>
       </li>
       <li class="list-item-inline">
-        <a class="link " href="blog.html">Blogs</a>
+        <a class="link " href="/src/blog.html">Blogs</a>
       </li>
     </ul>
   </nav>
@@ -66,7 +66,7 @@
       online
     </p>
     <div id="buttons">
-      <a class="link link-primary" href="projects.html">See Projects
+      <a class="link link-primary" href="/src/projects.html">See Projects
       </a>
     </div>
 
@@ -77,8 +77,8 @@
     <p>
       I am also working on some technical and non techincal blogs. I like to document my journey of learning.
     </p>
-   <div id="buttons">
-    <a class="link link-secondary" href="blog.html">Read Blogs</a>
+   <div class="buttons">
+    <a class="link link-secondary" href="/src/blog.html">Read Blogs</a>
    </div>
   </section>
   <br>
