--- a/src/blog.html
+++ b/src/blog.html
@@ -16,7 +16,7 @@
 
       <ul class="nav-items">
         <li class="list-item-inline">
-          <a class="link" href="index.html">Home</a>
+          <a class="link" href="/">Home</a>
         </li>
         <li class="list-item-inline">
           <a class="link" href="projects.html">Projects</a>
