--- a/src/projects.html
+++ b/src/projects.html
@@ -17,7 +17,7 @@
 
       <ul class="nav-items">
         <li class="list-item-inline">
-          <a class="link" href="index.html">Home</a>
+          <a class="link" href="/">Home</a>
         </li>
         <li class="list-item-inline">
           <a class="link" id="link-active" href="projects.html">Projects</a>
@@ -313,8 +313,7 @@
         />
       </div>
       <p>
-        I am also working on some technical and non techincal blogs. I like to
-        document my journey of learning.
+        Find the meaning of any emoji just by entering it or click on any from the given set to find out it's meaning.
       </p>
       <div class="buttons">
         <a class="link link-primary" href="https://n2oxf.csb.app/"
@@ -346,8 +345,7 @@
         />
       </div>
       <p>
-        I am also working on some technical and non techincal blogs. I like to
-        document my journey of learning.
+        A fun translation web app that will translate your sentences into Ferb-latin language.
       </p>
       <div class="buttons">
         <a
@@ -364,6 +362,41 @@
     </section>
 
     <section class="section ow container container-center">
+      <h1>Mark 6 : Minion Translate</h1>
+      <div class="icon">
+        Tech Stack :
+
+        <img
+          alt="Javascript logo"
+          src="https://img.icons8.com/ios-glyphs/30/000000/javascript.png"
+        />
+        <img
+          alt="css3 logo"
+          src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"
+        />
+        <img
+          alt="HTML5 logo"
+          src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"
+        />
+      </div>
+      <p>
+        A translation web app that will translate your sentences into Banana language.
+      </p>
+      <div class="buttons">
+        <a
+          class="link link-primary"
+          href="https://minion-translate-62926e.netlify.app/"
+          >Live Project
+        </a>
+        <a
+          class="link link-secondary"
+          href="https://https://github.com/bhtibrewal/minion-translate"
+          >Source Code</a
+        >
+      </div>
+    </section>
+
+    <section class="section  container container-center">
       <h1>Mark 1 : My Quiz</h1>
       <div class="icon">
         Tech Stack :
