--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
   <section class="section container container-center">
     <h1>About</h1>
-    <p>I'm a final year B-Tech student. I'm familiar with HTML5, CSS3, Git, JavaScript, ReactJS, and  Web Hosting.</p>
+    <p>I'm a final year B-Tech student. I love learning new technogies and growing my knowledge base. I'm familiar with HTML5, CSS3, Git, JavaScript, ReactJS, and  Web Hosting.</p>
    
   </section>
 
@@ -56,14 +56,13 @@
     <h1>Projects</h1>
     <div class="icon">
       Tech Stack :
-      <img alt="" src="https://img.icons8.com/ios-glyphs/40/000000/react.png"/>
-      <img alt="" src="https://img.icons8.com/ios-glyphs/30/000000/javascript.png"/>
-      <img alt="" src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/>
-      <img alt="" src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>
+      <img alt="react" src="https://img.icons8.com/ios-glyphs/40/000000/react.png"/>
+      <img alt="javascript" src="https://img.icons8.com/ios-glyphs/30/000000/javascript.png"/>
+      <img alt="css" src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/>
+      <img alt="html" src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>
     </div>
     <p>
-      I like to showcase my work and thus, you can see my projects hosted
-      online
+      I have made some small practice projects during level0 and some personal projects. I like to showcase my work and thus, you can see my projects hosted online.
     </p>
     <div id="buttons">
       <a class="link link-primary" href="/src/projects.html">See Projects
@@ -75,7 +74,7 @@
   <section class="section container container-center">
     <h1>Blogs</h1>
     <p>
-      I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+      I am also working on some technical and non techincal blogs. I like to document my journey of learning. Do give them a read and share your feedbacks with me.
     </p>
    <div class="buttons">
     <a class="link link-secondary" href="/src/blog.html">Read Blogs</a>
