--- a/src/projects.html
+++ b/src/projects.html
@@ -88,9 +88,6 @@
       </div>
       <p>A Wislist App with Light/Dark theme feature.</p>
       <div class="buttons">
-        <a class="link link-primary" href="https://1d2kl.csb.app/"
-          >Live Project
-        </a>
         <a
           class="link link-secondary"
           href="https://github.com/bhtibrewal/prac-react"
@@ -313,7 +310,8 @@
         />
       </div>
       <p>
-        Find the meaning of any emoji just by entering it or click on any from the given set to find out it's meaning.
+        Find the meaning of any emoji just by entering it or click on any from
+        the given set to find out it's meaning.
       </p>
       <div class="buttons">
         <a class="link link-primary" href="https://n2oxf.csb.app/"
@@ -345,7 +343,8 @@
         />
       </div>
       <p>
-        A fun translation web app that will translate your sentences into Ferb-latin language.
+        A fun translation web app that will translate your sentences into
+        Ferb-latin language.
       </p>
       <div class="buttons">
         <a
@@ -380,7 +379,8 @@
         />
       </div>
       <p>
-        A translation web app that will translate your sentences into Banana language.
+        A translation web app that will translate your sentences into Banana
+        language.
       </p>
       <div class="buttons">
         <a
@@ -396,31 +396,39 @@
       </div>
     </section>
 
-    <section class="section  container container-center">
-      <h1>Mark 1 : My Quiz</h1>
-      <div class="icon">
-        Tech Stack :
+    <section class="section container container-center">
+      <h1>Mark 2 : Javascript Quiz</h1>
 
-        <img
-          alt="Javascript logo"
-          src="https://img.icons8.com/ios-glyphs/30/000000/javascript.png"
-        />
-        <img
-          alt="css3 logo"
-          src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"
-        />
-        <img
-          alt="HTML5 logo"
-          src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"
-        />
-      </div>
-      <p>
-        I am also working on some technical and non techincal blogs. I like to
-        document my journey of learning.
-      </p>
+      <p>A small quiz to test your knowledge of javascript.</p>
       <div class="buttons">
-        <a class="link link-primary" href="projects.html">Live Project </a>
-        <a class="link link-secondary" href="blog.html">Source Code</a>
+        <a
+          class="link link-primary"
+          href="https://replit.com/@BhavikaTibrewal/Javascript-Quiz?embed=true#index.js"
+          >Live Project
+        </a>
+        <a
+          class="link link-secondary"
+          href="https://github.com/bhtibrewal/Javascript-Quiz/tree/main"
+          >Source Code</a
+        >
+      </div>
+    </section>
+
+    <section class="section ow container container-center">
+      <h1>Mark 1 : How well do you know me?</h1>
+
+      <p>A small quiz to check how well do you know me</p>
+      <div class="buttons">
+        <a
+          class="link link-primary"
+          href="https://replit.com/@BhavikaTibrewal/bhtibrewal-QUIZ?embed=true#index.js"
+          >Live Project
+        </a>
+        <a
+          class="link link-secondary"
+          href="https://github.com/bhtibrewal/bhtibrewal-QUIZ"
+          >Source Code</a
+        >
       </div>
     </section>
     <br />
