--- a/src/projects.html
+++ b/src/projects.html
@@ -88,6 +88,9 @@
       </div>
       <p>A Wislist App with Light/Dark theme feature.</p>
       <div class="buttons">
+        <a class="link link-primary" href="https://evum1.csb.app/"
+          >Live Project
+        </a>
         <a
           class="link link-secondary"
           href="https://github.com/bhtibrewal/prac-react"
@@ -122,7 +125,7 @@
         </a>
         <a
           class="link link-secondary"
-          href="https://github.com/bhtibrewal/Stock-Purchases"
+          href="https://github.com/bhtibrewal/Stock-Purchase"
           >Source Code</a
         >
       </div>
@@ -390,7 +393,7 @@
         </a>
         <a
           class="link link-secondary"
-          href="https://https://github.com/bhtibrewal/minion-translate"
+          href="https://github.com/bhtibrewal/minion-translate"
           >Source Code</a
         >
       </div>
@@ -399,7 +402,7 @@
     <section class="section container container-center">
       <h1>Mark 2 : Javascript Quiz</h1>
 
-      <p>A small quiz to test your knowledge of javascript.</p>
+      <p>A quiz App to test your knowledge of javascript.Build with Node js</p>
       <div class="buttons">
         <a
           class="link link-primary"
