--- a/src/blog.html
+++ b/src/blog.html
@@ -47,13 +47,12 @@
       </div>
     </section>
     <section class="section container container-center">
-      <h1>My Quiz</h1>
+      <h1>neoG Journey</h1>
       <p>
-        I am also working on some technical and non techincal blogs. I like to
-        document my journey of learning.
+        A blog on my journey with neoGcamp level zero. I hope you like it, do give your feedbacks. 
       </p>
       <div class="button">
-        <a class="link link-primary" href="projects.html">Read Blog </a>
+        <a class="link link-primary" href="https://bhavika-tibrewal.hashnode.dev/neog-journey">Read Blog </a>
       </div>
     </section>
     <br />
