--- a/src/projects.html
+++ b/src/projects.html
@@ -398,8 +398,38 @@
         >
       </div>
     </section>
-
     <section class="section container container-center">
+      <h1>Mark 3-5: Web Developer portfolio</h1>
+      <div class="icon">
+        Tech Stack :
+
+        <img
+          alt="css3 logo"
+          src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"
+        />
+        <img
+          alt="HTML5 logo"
+          src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"
+        />
+      </div>
+      <p>
+        Web developer portfolio to showcase my projects and blogs, built with Html and CSS.Using Github and deploy on Netlify.
+      </p>
+      <div class="buttons">
+        <a
+          class="link link-primary"
+          href="https://bhavika-developer.netlify.app/"
+          >Live Project
+        </a>
+        <a
+          class="link link-secondary"
+          href="https://github.com/bhtibrewal/portfolio"
+          >Source Code</a
+        >
+      </div>
+    </section>
+
+    <section class="section ow container container-center">
       <h1>Mark 2 : Javascript Quiz</h1>
 
       <p>A quiz App to test your knowledge of javascript.Build with Node js</p>
@@ -417,7 +447,7 @@
       </div>
     </section>
 
-    <section class="section ow container container-center">
+    <section class="section container container-center">
       <h1>Mark 1 : How well do you know me?</h1>
 
       <p>A small quiz to check how well do you know me</p>
